Fix some heading anchor alignments

--- a/style/main.css
+++ b/style/main.css
@@ -23,7 +23,7 @@
         @apply relative;
 
         > a {
-          @apply hidden absolute top-2 -left-8;
+          @apply hidden absolute top-2.5 -left-10 pr-2;
           @apply text-gray-500 dark:text-gray-400;
           @apply hover:text-gray-400 dark:hover:text-gray-300;
 
@@ -32,6 +32,10 @@
           }
         }
       }
+    }
+
+    h2.with-anchor > a {
+      @apply top-1.5;
     }
 
     h1,
